--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,11 @@ authors:
   adiatma:
     name: Adiatma Kamarudin
     display_name: adiatma
-    description: "Software Engineer"
-    web: 'https://adiatma.github.io'
+    email: adiatma9024@gmail.com
+    twitter: https://twitter.com/adiatma__
+    description: "Software Engineer, Opensource Enthusiasm, and Blogger"
+    web: "https://adiatma.github.io"
+    gravatar: 4a2a99c8bd08b234fda70219c575c53a
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
