--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Adiatma Kamarudin
 description: Just personal blogs.
 logo: assets/images/logo.png
 favicon: assets/images/logo.png
-baseurl: ''
+baseurl: 'https://adiatma.github.io'
 google_analytics: '"UA-143014045-1"'
 disqus: adiatma9024
 include:
