chore(config): change title

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Adiatma Kamarudin
 title: Adiatma Kamarudin
-description: Just personal blogs.
+description: My personal blogs.
 logo: assets/images/logo.png
 favicon: assets/images/logo.png
 baseurl: ''
