chore(config): change author description

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ authors:
     display_name: adiatma
     email: adiatma9024@gmail.com
     twitter: https://twitter.com/adiatma__
-    description: "Software Engineer, Opensource Enthusiasm, and Blogger"
+    description: "Software Engineer, Opensource Enthusiasm, and Father"
     web: "https://adiatma.github.io"
     gravatar: 4a2a99c8bd08b234fda70219c575c53a
 plugins:
